# ZK-travel-history-management-system

./: .env.example  .gitignore  .gitmodules  README.md  buildContract.sh  foundry.toml  package.json
.next/: prerender-manifest.json  trace
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/static/chunks/: _error.js  (+3 more)
.next/types/: routes.d.ts  validator.ts
app/: README.md  next.config.ts  package.json  tailwind.config.js
circuits/: Nargo.toml  Prover.example.toml  build.sh  test_wrongProof.toml
circuits/circuit-for-country/: Nargo.toml  Prover.example.toml  build.sh
circuits/circuit-for-travel-history/: Prover.example.toml  build.sh  circuit_test.sh
circuits/src/: main.nr
contracts/: StakingPool.sol  TravelBookingManager.sol  TravelHistoryManager.sol  TravelHistoryProofVerifier.sol
contracts-aztec/: Nargo.toml  README.md
contracts-experimental/contracts-aztec/: package.json
contracts/dataType/: DataType.sol
contracts/interfaces/: IERC20.sol
old/: README.md
script/: DeploymentAllContracts.s.sol  Starter.s.sol  Verify.s.sol  deployment.sh  starter-script.sh  verify-script.sh
scripts/base-mainnet/fuzzing/rs/StakingPool/: Cargo.toml
scripts/base-mainnet/fuzzing/rs/StakingPool/src/: main.rs
scripts/celo-mainnet/calling-functions/rs/: .env.example  Cargo.toml  README.md
scripts/celo-mainnet/calling-functions/rs/artifacts/0910/TravelHistoryManager.sol/: TravelHistoryManager.json
scripts/celo-mainnet/calling-functions/rs/base-mainnet/single-sc-and-single-sc-address-call/: mod.rs  staking_pool.rs
scripts/celo-mainnet/calling-functions/rs/celo-mainnet/batch-sc-call/: runningScript_StakingPool.sh  runningScript_TravelBookingManager.sh  runningScript_TravelHistoryManager.sh  staking_pool.rs  travel_booking_manager.rs  travel_history_manager.rs
scripts/celo-mainnet/calling-functions/rs/celo-mainnet/single-sc-and-single-sc-address-call/: runningScript_TravelBookingManager.sh  runningScript_TravelHistoryManager.sh  staking_pool.rs  travel_booking_manager.rs  travel_history_manager.rs
scripts/celo-mainnet/calling-functions/rs/celo-mainnet/single-sc-call/: runningScript_StakingPool.sh  runningScript_TravelHistoryManager.sh  staking_pool.rs  travel_booking_manager.rs  travel_history_manager.rs
scripts/celo-mainnet/calling-functions/rs/local-anvil/batch-sc-call/: runningScript_StakingPool.sh  staking_pool.rs
test/: StarterOnSonicTestnet.t.sol  TravelHistoryManager.t.sol  TravelHistoryProofVerifier.t.sol  runningTest_Sonic-Testnet.sh  runningTest_TravelHistoryManager.sh  runningTest_TravelHistoryProofVerifier.sh
(+298 files in other folders)
