[package]
name = "zk_insurance_claim_verifier"
version = "0.1.0"
edition = "2021"

[[bin]] # For the SC scripts of the StakingPool contract on Anvil (for Batch SC calls)
name = "staking_pool_on_anvil"
path = "local-anvil/batch-sc-call/staking_pool.rs"

[[bin]] # For the SC scripts of the StakingPool contract on Base Mainnet (for Batch SC calls)
name = "staking_pool_on_celo_mainnet_with_batch_sc_call"
path = "celo-mainnet/batch-sc-call/staking_pool.rs"

[[bin]] # For the SC scripts of the TravelHistoryManager contract on Base Mainnet (for Batch SC calls)
name = "travel_history_manager_on_celo_mainnet_with_batch_sc_call"
path = "celo-mainnet/batch-sc-call/travel_history_manager.rs"

[[bin]] # For the SC scripts of the TravelBookingManager contract on Base Mainnet (for Batch SC calls)
name = "travel_booking_manager_on_celo_mainnet_with_batch_sc_call"
path = "celo-mainnet/batch-sc-call/travel_booking_manager.rs"

[[bin]] # For the SC scripts of the StakingPool contract on Base Mainnet (for a Single SC calls)
name = "staking_pool_on_celo_mainnet_with_single_sc_call"
path = "celo-mainnet/single-sc-call/staking_pool.rs"

[[bin]] # For the SC scripts of the TravelHistoryManager contract on Base Mainnet (for a Single SC calls)
name = "travel_history_manager_on_celo_mainnet_with_single_sc_call"
path = "celo-mainnet/single-sc-call/travel_history_manager.rs"

[[bin]] # For the SC scripts of the TravelBookingManager contract on Base Mainnet (for a Single SC calls)
name = "travel_booking_manager_on_celo_mainnet_with_single_sc_call"
path = "celo-mainnet/single-sc-call/travel_booking_manager.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
dotenv = "0.15"
anyhow = "1.0"
alloy = { version = "1.0.27", features = ["full"] }
alloy-contract = "1.0.27"
alloy-provider = "1.0.27"
alloy-signer = "1.0.27"
alloy-signer-local = "1.0.27"
alloy-primitives = "1.0.27"
alloy-rpc-client = "1.0.27"
reqwest = "0.11"

# Separate node bindings dependency
alloy-node-bindings = "1.0"

# For parsing contract artifacts
serde_json = "1.0"