[package]
name = "staking-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
alloy = { version = "0.1", features = ["provider-http", "signer-local", "contract", "sol-types", "rpc-types"] }
alloy-network = "0.1"
alloy-primitives = "0.7"
reqwest = "0.11"
